--- a/ocr-websharper/package.json
+++ b/ocr-websharper/package.json
@@ -3,5 +3,11 @@
   "version": "1.0.0",
   "devDependencies": {
     "esbuild": "^0.19.9"
+  },
+  "scripts": {
+    "release": "vite build"
+  },
+  "dependencies": {
+    "vite": "^4.4.11"
   }
 }
