fix typo preventing build

--- a/ocr-websharper/package.json
+++ b/ocr-websharper/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ocr_websharper",
+  "name": "ocr-websharper",
   "version": "1.0.0",
   "devDependencies": {
     "esbuild": "^0.19.9"
